<resources>
    <string name="app_name">ATS</string>
    <string name="user">Usuario@gmail.com</string>
    <string name="btn_listo">Listo</string>
    <string name="btn_atras">Atras</string>
    <string name="tiempo_examen_simulacion">El examen va a durar 3 horas</string>
    <string name="pregunta_iniciar_simulacion">¿Listo para iniciar el Examen?</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="simulacro_tiempo">Tiempo:</string>
    <string name="hora">00:00:25</string>
    <string name="Pregunta_simulacion">¿En que fecha fue proclamada  la declaracion universal de los  derechos humanos?</string>
    <string name="materia_simulacro">Curso: Historia Universal</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_volver_intentar">Volver a Intentar</string>
    <string name="btn_ver_errores">Ver errores</string>
    <string name="leyenda_puntaje_simulacion">PUNTAJE: 0-100</string>
    <string name="mostrar_puntaje_simulacion">SU PUNTAJE: 86 PUNTOS</string>
    <string name="cantidad_errores_simulacion">CANTIDAD DE ERRORES: 12 ERRORES</string>
    <string name="materia_practica1">Curso:Biología</string>
    <string name="Pregunta_practica1">Señale la organela que presenta numerosas enzimas oxidasas y catalasas:</string>
    <string name="materia_practica2">Curso:Matemática</string>
    <string name="horaM">00:03:30</string>
    <string name="Pregunta_practica2">En una urna hay 10 bolas rojas, 12 azules, 15 verdes, ¿como mínimo cuál es el número de bolas que debo sacar para obtener 8 del mismo color?</string>
    <string name="mostrar_puntaje_practica">SU PUNTAJE: 18 PUNTOS</string>
    <string name="leyenda_puntaje_practica">PUNTAJE: 0 - 20 puntos</string>
    <string name="titulo_practica">Practica</string>
    <string name="cantidad_errores_practica">CANTIDAD DE ERRORES: 12 ERROR(ES)</string>
    <string name="mensaje_inicio_practico">¿Listo para Iniciar la Practica?</string>
    <string name="btn_registrate">REGÍSTRATE</string>
    <string name="Nombres">Nombres:</string>
    <string name="Apellidos">Apellidos:</string>
    <string name="Email">Correo:</string>
    <string name="Contrasena">Contraseña:</string>
    <string name="Conf_contraseña">Confirmar contraseña:</string>
    <string name="Maria">Maria Angelica</string>
    <string name="Perez">Perez de la Cruz</string>
    <string name="gmail">mariadelacruz@gmail.com</string>
    <string name="Cont">Angelica#10</string>
    <string name="titulo_registro">CREAR CUENTA</string>
    <string name="pass">Contraseña</string>
</resources>