<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".crear_cuenta"
    android:background="#F4FEBA"
    >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="25dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="60dp"
            android:text="@string/titulo_registro"
            android:textColor="#004242"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/Nombres"
            android:textColor="#004242"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="60dp"
            android:backgroundTint="@color/black"
            android:hint="@string/Maria"
            android:textSize="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/Apellidos"
            android:textColor="#004242"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="60dp"
            android:hint="@string/Perez"
            android:backgroundTint="@color/black"
            android:textSize="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/Email"
            android:textColor="#004242"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="60dp"
            android:backgroundTint="@color/black"
            android:hint="@string/gmail"
            android:textSize="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/Contrasena"
            android:textColor="#004242"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="60dp"
            android:backgroundTint="@color/black"
            android:hint="@string/Cont"
            android:textSize="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/Conf_contraseña"
            android:textColor="#004242"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="60dp"
            android:hint="@string/Cont"
            android:textSize="15dp"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="60dp"
            android:layout_height="45dp"
            android:backgroundTint="#004242"
            android:paddingHorizontal="60dp"
            android:paddingVertical="15dp"
            android:text="@string/btn_registrate"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/border_radious"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="0.229"
            />
</LinearLayout>