<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultadosSimulacion"
    android:background="@color/purple_200"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="#222222"
            android:orientation="vertical"
            >
            <View
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="#7A7A7A"

                />

            <View
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="#7A7A7A"

                />

            <View
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="#7A7A7A"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="#004242"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/titulo_practica"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textSize="24dp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F4FEBA"
        >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mensaje_inicio_practico"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        />


        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="70dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#004242"
            android:paddingHorizontal="60dp"
            android:paddingVertical="15dp"
            android:text="@string/btn_listo"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:background="@drawable/border_radious"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.116"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="70dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#004242"
            android:paddingHorizontal="60dp"
            android:paddingVertical="15dp"
            android:text="@string/btn_atras"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:background="@drawable/border_radious"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.41"
            />

    </LinearLayout>

</LinearLayout>