<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".confirmarsimulacion"
    android:background="#F4FEBA"
    >


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="#004242"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="#222222"
            android:orientation="vertical">

            <View
                android:layout_width="30dp"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="#7A7A7A"

                />

            <View
                android:layout_width="30dp"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="#7A7A7A"

                />

            <View
                android:layout_width="30dp"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="#7A7A7A"

                />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/cpatras_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_listo"
        android:backgroundTint="#004242"
        android:textSize="25sp"
        android:paddingHorizontal="60dp"
        android:paddingVertical="10dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.383" />

    <Button
        android:id="@+id/cplisto_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_atras"
        android:backgroundTint="#004242"
        android:textSize="25sp"
        android:paddingHorizontal="60dp"
        android:paddingVertical="10dp"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpatras_btn"
        app:layout_constraintVertical_bias="0.348" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiempo_examen_simulacion"
        android:textColor="@color/black"
        android:textSize="17sp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta_iniciar_simulacion"
        android:textSize="50sp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>